# SantorinAI

./: .gitignore  README.md  build_package.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: black-format-check.yml  python-publish.yml  python-tests.yml
assets/3d_models/: base.stl  bottom_block.stl  builder.stl  dome.stl  middle_block.stl  play_board.stl  top_block.stl
examples/: player_list_evaluator.py  random_players_match.py
player_examples/: first_choice_player.py  random_player.py
santorinai/: __init__.py  board.py  pawn.py  player.py  pound.py  tester.py
santorinai/board_displayer/: board_displayer.py  vpython.py
santorinai/player_examples/: README.md  basic_player.py  first_choice_player.py  random_player.py
test/: README.md  test_board.py  test_tester.py
