[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SantorinAI"
version = "1.1.1"
description = "A Python library that helps you create AI for the Santorini board game"
readme = "README.md"
authors = [{ name = "Tom Mansion", email = "tomansion@yahoo.fr" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["santorini", "ai", "boardgame"]
dependencies = ["pysimplegui == 4.60.0"]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "unittest", "coverage"]
